--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,47 @@ body {
   letter-spacing: 0.03em;
   font-family: var(--font-primary);
 }
+.backdrop {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+.modal-window {
+  position: absolute;
+  background-color: #fff;
+  border-radius: 4px;
+  width: 528px;
+  height: 581px;
+  transform: scale(1);
+  transition: transform 250ms var(--trasnition-master);
+}
+.modal-close-btn {
+  position: absolute;
+  top: 8px;
+  left: 490px;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+.is-hidden {
+  visibility: hidden;
+  pointer-events: none;
+}
+.is-hidden .modal-window {
+  transform: scale(0);
+  transition: transform 250ms var(--trasnition-master);
+}
 header {
   border-bottom: #ececec 1px solid;
 }
@@ -43,7 +84,6 @@ header > div {
   align-items: center;
   padding: 133px 0;
 }
-
 .container-advantages {
   display: flex;
   justify-content: center;
@@ -397,18 +437,20 @@ header .logo {
 .links:active {
   color: var(--brand-blue);
 }
-.links::after {
+.link-underline:hover::after {
+  content: "";
+  display: block;
   position: absolute;
+  margin-top: 28px;
   width: 58px;
   height: 4px;
-  left: 552px;
-  top: 76px;
-  background: #2196f3;
   border-radius: 2px;
+  background: #2196f3;
 }
 .contact {
   color: var(--brand-gray);
   letter-spacing: 0.02em;
+  cursor: pointer;
 }
 .contact:hover,
 .contact:focus {
